first start gulp

--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -1,2 +1,9 @@
 @import "main";
 @import "site";
+@import "swiper.min";
+@import "main";
+@import "logo";
+@import "news";
+@import "reviews";
+@import "slider";
+@import "main-menu";
