--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -1,7 +1,131 @@
-.site {
-  @include justify;
+  .site {
+    position: relative;
+    overflow: hidden;
+    min-height: 100%;
+    min-width: 320px;
+    font: 14px/18px 'Open Sans', sans-serif;
+    font-weight: 600;
+    color:#707070;
+    z-index: 1;
 
+    &:after {
+      content: '';
+      display: block;
+      clear: both;
+      width: 100%;
+      height: 100px;
+    }
+    &__content {
+      position: relative;
+      z-index: 2;
+  }
+    &__header {
+      position: relative;
+      height: 260px;
+      z-index: 3;
+  }
+    &__footer {
+      z-index: 2;
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      height: 100px;
+    }
+    &__footer-layout {
+      width: 100%;
+      height: 100px;
+      background: blue;
+    }
+    &__tabs{
+      height: 86px;
+      background: #8bccec;
+      font-family: 'Open Sans SamiBold', 'sans-serif';
+
+      & .plastic,
+      & .maxillofacial,
+      & .stomatology{
+        display: block;
+        vertical-align: top;
+        padding: 5px 0;
+        font-size: 13px;
+        color: #fff;
+        text-align: center;
+        text-decoration: underline;
+        transition: background .3s ease;
+        -webkit-transition: background .3s ease;
+      }
+      & .active{
+        background: #009fd9;
+        text-decoration: none;
+      }
+        & .plastic:hover,
+        & .maxillofacial:hover,
+        & .stomatology:hover{
+          background: #009fd9;
+      }
+    }
+    &__header-work-time{
+    position: absolute;
+    top: 13px;
+    right: 26px;
+    font-size: 13px;
+    color: #707070;
+    line-height: 20px;
+  }
+    &__header-work-time span{
+    display: block;
+  }
+    &__header-tel{
+    position: absolute;
+    z-index: 1;
+    top: 170px;
+    left: 50%;
+    width: 190px;
+    color: #707070;
+    font-size: 13px;
+    text-align: center;
+    transform: translateX(-50%);
+    -webkit-transform: translateX(-50%);
+  }
+    &__header-tel a{
+    color: #707070;
+    font-size: 18px;
+    line-height: 25px;
+    cursor: default;
+  }
+    &__header-request{
+    border-bottom: 1px dotted #5286bf;
+    font-size: 16px;
+    color:#5286bf;
+    line-height: 25px;
+    transition: border .3s ease;
+    -webkit-transition: border .3s ease;
+    cursor: pointer;
+  }
+    &__header-request:hover{
+    border-bottom: 1px dotted transparent;
+  }
+    &__content-layout{
+    margin-top: 100px;
+    padding: 0 13px;
+  }
+    &__title{
+      position: relative;
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+      border-bottom: 2px solid #f3f3f3;
+      font-size: 18px;
+      line-height: 20px;
+      font-weight: 700;
+      text-transform: uppercase;
+
+      & span{
+        display: block;
+      }
+  }
 }
+
 @media (min-width: $phone-landscape) {
   .site {
 
