--- a/app/sass/index.scss
+++ b/app/sass/index.scss
@@ -6,4 +6,7 @@
 @import "news";
 @import "reviews";
 @import "slider";
+@import "photo";
 @import "main-menu";
+@import "aside";
+@import "plastic-surgery";
