--- a/app/sass/_site.scss
+++ b/app/sass/_site.scss
@@ -13,7 +13,7 @@
       display: block;
       clear: both;
       width: 100%;
-      height: 100px;
+      height: 57px;
     }
     &__content {
       position: relative;
@@ -30,12 +30,32 @@
       left: 0;
       right: 0;
       bottom: 0;
-      height: 100px;
-    }
-    &__footer-layout {
-      width: 100%;
-      height: 100px;
-      background: blue;
+      height: 57px;
+
+
+      &-layout {
+        width: 100%;
+        height: 57px;
+        padding: 10px 10px;
+        background: #6684aa url("../img/footer-bg.png") no-repeat center;
+        color: #fff;
+        font-weight: 400;
+      }
+     &-copywriter{
+        margin-bottom: 2px;
+     }
+     &-developer{
+
+      }
+      &-link{
+        color: #fff;
+        text-decoration:underline;
+
+        &:hover{
+          text-decoration: none;
+        }
+      }
+
     }
     &__tabs{
       height: 86px;
