--- a/app/sass/_logo.scss
+++ b/app/sass/_logo.scss
@@ -1,9 +1,15 @@
 .logo {
   position: absolute;
-  top: 66px;
+  top: 65px;
   left: 50%;
   transform: translateX(-50%);
   -webkit-transform: translateX(-50%);
+
+  img{
+    width: 300px;
+    height: auto;
+
+  }
 }
 
 @media (min-width: $tablet-landscape) {
