--- a/app/sass/_main-menu.scss
+++ b/app/sass/_main-menu.scss
@@ -21,16 +21,18 @@
   border: none;
   padding: 0;
   position: absolute;
-  top: 13px;
-  left: 11px;
+  top: 11px;
+  left: 10px;
   width: 124px;
   height: 40px;
+  padding: 0 12px;
   background: #a2d6f0;
   background: -moz-linear-gradient(top,  #a2d6f0 0%, #3765a9 100%);
   background: -webkit-linear-gradient(top,  #a2d6f0 0%,#3765a9 100%);
   background: linear-gradient(to bottom,  #a2d6f0 0%,#3765a9 100%);
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a2d6f0', endColorstr='#3765a9',GradientType=0 );
   font-size: 16px;
+  text-align: left;
   color: #fff;
 
   > span {
@@ -38,7 +40,7 @@
   vertical-align: middle;
   width: 20px;
   height: 3px;
-  margin-right: 13px;
+  margin-right: 18px;
   background: #fff;
   position: relative;
   border-radius: 2px;
