--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,7 @@
     position: relative;
     height: 260px;
     z-index: 3;
+    overflow: hidden;
 }
 .site__footer {
     z-index: 2;
@@ -708,6 +709,78 @@
 }
 /* --------------- /news --------------- */
 
+/* --------------- catalog --------------- */
+.catalog {
+    padding: 10px 0 14px;
+}
+.catalog__wrap{
+    width: 100%;
+    padding: 0 8px;
+}
+.catalog__item {
+    margin-bottom: 16px;
+    color: #707070;
+}
+.catalog__content {
+    display: none;
+}
+.catalog__hider {
+    display: flex;
+    display: -webkit-flex;
+    flex-flow: row wrap;
+    -webkit-flex-flow: row wrap;
+    flex-wrap: wrap;
+    -webkit-flex-wrap: wrap;
+    justify-content: center;
+    -webkit-justify-content: center;
+    align-items: center;
+    -webkit-align-items: center;
+    width: 100%;
+    height: 61px;
+    margin-bottom: 10px;
+    color: #fff;
+    font-size: 16px;
+    text-align: center;
+    background: rgb(140, 205, 237);
+    background: -moz-linear-gradient(top, rgba(140, 205, 237, 1) 0%, rgba(52, 97, 167, 1) 100%);
+    background: -webkit-linear-gradient(top, rgba(140, 205, 237, 1) 0%, rgba(52, 97, 167, 1) 100%);
+    background: linear-gradient(to bottom, rgba(140, 205, 237, 1) 0%, rgba(52, 97, 167, 1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8ccded', endColorstr='#3461a7', GradientType=0);
+    cursor: pointer;
+}
+.catalog__hider img {
+    height: 44px;
+}
+.catalog__img {
+    overflow: hidden;
+    position: relative;
+    height: 194px;
+    margin-bottom: 16px;
+    border-radius: 5px;
+}
+.catalog__img img {
+    display: block;
+}
+.catalog__title {
+    margin-bottom: 10px;
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 24px;
+}
+.catalog__title a{
+    color: #707070;
+    text-decoration: underline;
+    transition: opacity .3s ease;
+    -webkit-transition: opacity .3s ease;
+}
+.catalog__title a:hover{
+    opacity: .8;
+}
+.catalog__icon{
+    display: none;
+}
+/* --------------- /catalog --------------- */
+
 /* --------------- logo --------------- */
 .logo {
     position: absolute;
@@ -873,6 +946,63 @@
         height: 140px;
     }
     /* --------------- /news --------------- */
+
+    /* --------------- catalog --------------- */
+    .catalog {
+        margin-bottom: 24px;
+        padding: 22px 0 14px;
+        background: url("../img/bg-catalog.jpg") center;
+        background-size: cover;
+    }
+    .catalog__wrap {
+        display: flex;
+        display: -webkit-flex;
+        flex-flow: row wrap;
+        -webkit-flex-flow: row wrap;
+        flex-wrap: wrap;
+        -webkit-flex-wrap: wrap;
+        justify-content: space-between;
+        -webkit-justify-content: space-between;
+        align-items: flex-start;
+        -webkit-align-items: flex-start;
+        width: 720px;
+        margin: 0 auto;
+        padding: 5px 0;
+    }
+    .catalog__img {
+        display: flex;
+        display: -webkit-flex;
+        flex-flow: row wrap;
+        -webkit-flex-flow: row wrap;
+        justify-content: center;
+        -webkit-justify-content: center;
+        align-items: flex-start;
+        -webkit-align-items: flex-start;
+    }
+    .catalog__item{
+        display: inline-block;
+        vertical-align: top;
+        width: 221px;
+        padding: 0;
+        color: #fff;
+    }
+    .catalog__hider{
+        display: none;
+    }
+    .catalog__content {
+        display: block!important;
+    }
+    .catalog__title a {
+        color: #fff;
+    }
+    .catalog__icon{
+        display: block;
+        margin-bottom: 8px;
+    }
+    .catalog__icon img{
+        display: block;
+    }
+    /* --------------- /catalog --------------- */
 
     /* --------------- photo --------------- */
     .photo{
@@ -1065,7 +1195,7 @@
     /* --------------- /plastic-surgery --------------- */
 
     /* --------------- reviews --------------- */
-   .reviews{
+    .reviews{
         display: none;
         width: 100%;
     }
@@ -1076,4 +1206,26 @@
         top: 19px;
     }
     /* --------------- /menu --------------- */
+
+    /* --------------- catalog --------------- */
+    .catalog{
+        padding: 0 0 4px;
+    }
+    .catalog__wrap {
+        width: 940px;
+    }
+    .catalog__item {
+        width: 294px;
+    }
+    .catalog__img{
+        margin-bottom: 21px;
+    }
+    .catalog__icon {
+        float: left;
+        margin-right: 15px;
+    }
+    .catalog__text{
+        overflow: hidden;
+    }
+    /* --------------- /catalog --------------- */
 }
